cluster/gateway/kustomize/database-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: database-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 5432 # to expose internal service via external port 2379
      name: tcp
      protocol: TCP
    hosts:
    - "*"
