cluster/gateway/kustomize/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: api-credential # need to generate certificate first. see .github/workflows/generate-cert.yaml
  - port:
      number: 5432 # to expose internal service via external port 2379
      name: postgres
      protocol: TCP
