cluster/gateway/kustomize/api-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /api/sample/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: sample-service.default.svc.cluster.local
