cluster/gateway/kustomize/database-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: database
spec:
  hosts:
  - "*"
  gateways:
  - database-gateway
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: database-service.default.svc.cluster.local
        port:
          number: 5432
