cluster/gateway/kustomize/spinnaker-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spinnaker
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - name: Spinnaker
    match:
    - uri:
        prefix: /spinnaker/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 9000
        host: spin-deck.spinnaker.svc.cluster.local
