cluster/gateway/kustomize/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: database-service
        port:
          number: 5432
  http:
  - match:
    - uri:
        prefix: /sample/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: sample-service.default.svc.cluster.local
