cluster/gateway/kustomize/web-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
  - match:
    - uri:
        prefix: /static/
    route:
    - destination:
        port:
          number: 9000
        host: minio-service.default.svc.cluster.local
